--- a/bestillinger.html
+++ b/bestillinger.html
@@ -8,6 +8,16 @@
     <meta name="robots" content="noindex" />
   </head>
   <body>
+    <header>
+      <nav>
+        <ul>
+          <li><a href="index.html">Forside</a></li>
+          <li><a href="bestillinger.html">Bestillinger</a></li>
+          <li><a href="om_bagt.html">Om Bagt</a></li>
+          <li><a href="kontakt.html">Kontakt</a></li>
+        </ul>
+      </nav>
+    </header>
     <script src="javascript/login.js"></script>
   </body>
 </html>
