--- a/bestillinger.html
+++ b/bestillinger.html
@@ -18,6 +18,7 @@
         </ul>
       </nav>
     </header>
+    <main></main>
     <script src="javascript/login.js"></script>
   </body>
 </html>
