--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bagt - Boulangerie & Bageri</title>
+    <link rel="stylesheet" href="https://use.typekit.net/rjv8grd.css" />
+    <link rel="stylesheet" href="css/mutual.css" />
+    <link rel="stylesheet" href="css/forside.css" />
     <meta name="robots" content="noindex" />
   </head>
   <body>
