indhold til forside

--- a/index.html
+++ b/index.html
@@ -21,7 +21,63 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <iframe src="" frameborder="0"></iframe>
+      <h2>Franskinspireret bageri med danske rødder. Vi håndlaver bagværk af kvalitet med kærlighed til dig.</h2>
+      <div>
+        <h2>Lidt om os</h2>
+        <p>
+          Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
+          autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
+        </p>
+      </div>
+      <div class="container">
+        <div>
+          <img src="" alt="" />
+          <h2>NØRREBRO</h2>
+          <p>
+            Jagtvej 13. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30 Helligdage: 7.00 - 17.30 JULENS ÅBNINGSTIDER: 23. dec: 7.00 - 14.00 24. dec: 7.00 - 12.00 25. dec: LUKKET 26. dec: 7.00 - 14.00 27. dec: 7.00 - 14.00 31. dec: 7.00 - 13.00 1. jan: LUKKET
+            2. jan: 7.00 - 14.00 ALLE ANDRE DAGE ALM. LUKKETIDER
+          </p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>INDRE BY</h2>
+          <p>
+            Borgergade 130. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30 Helligdage: 7.00 - 17.30 ​ JULENS ÅBNINGSTIDER: 23. dec: 7.00 - 14.00 24. dec: 7.00 - 12.00 25. dec: LUKKET 26. dec: 7.00 - 14.00 27. dec: 7.00 - 14.00 31. dec: 7.00 - 13.00 1. jan:
+            LUKKET 2. jan: 7.00 - 14.00 ALLE ANDRE DAGE ALM. LUKKETIDER
+          </p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>HORNBÆK</h2>
+          <p>Nordre Strandvej 339. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30 Helligdage: 6.30 - 17.30 ​ JULENS ÅBNINGSTIDER: 24. dec: 6.30 - 12.00 25. dec: LUKKET 31. dec: 6.30 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>GILLELEJE</h2>
+          <p>Gilleleje Stationsvej 2. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30 Helligdage: 6.30 - 17.30 ​ JULENS ÅBNINGSTIDER: 24. dec: 6.30 - 12.00 25. dec: LUKKET 31. dec: 6.30 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>HELSINGØR</h2>
+          <p>Stengade 8. ÅBNINGSTIDER: Man - Fre: 7.00 - 17.30 Weekend & helligdage: 7.00 -16.30 ​ JULENS ÅBNINGSTIDER: 24. dec: LUKKET 25. dec: LUKKET 26. dec: LUKKET 31. dec: 7.00 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>Bagt Forhandlere:</h2>
+          <p>Hej Humlebæk</p>
+          <p>Daisy Fredensborg</p>
+          <p>Rågeleje</p>
+          <p>Kommer snart</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2></h2>
+          <p></p>
+        </div>
+      </div>
+    </main>
     <script src="javascript/login.js"></script>
   </body>
 </html>
