Begyndt på text

--- a/bestillinger.html
+++ b/bestillinger.html
@@ -21,7 +21,81 @@
         </ul>
       </nav>
     </header>
-    <main></main>
+    <main>
+      <img src="" alt="" />
+      <h1>Udvalg</h1>
+
+      <h2>Kager</h2>
+      <p>Gør det nemt at holde fest og lade bagt klare desserten</p>
+
+      <h3>Mini Kager</h3>
+      <p>
+        Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt
+        kan laves i mini versioner.
+      </p>
+
+      <img src="" alt="" />
+      <p>Jordbærkage på browniebund</p>
+      <p>15 kr.</p>
+
+      <img src="" alt="" />
+      <p>Jordbærkage på marzarinbund</p>
+      <p>15 kr.</p>
+
+      <img src="" alt="" />
+      <p>Pong sur</p>
+      <p>15 kr.</p>
+
+      <img src="" alt="" />
+      <p>Kartoffelkage</p>
+      <p>15 kr.</p>
+
+      <img src="" alt="" />
+      <p>Mr. Marcel</p>
+      <p>15 kr.</p>
+
+      <img src="" alt="" />
+      <p>Nøddebar</p>
+      <p>15 kr.</p>
+
+      <img src="" alt="" />
+      <p>Pinktsnitte</p>
+      <p>10 kr.</p>
+
+      <img src="" alt="" />
+      <p>Romkugle med chokolade</p>
+      <p>8 kr.</p>
+
+      <img src="" alt="" />
+      <p>Romkulge med nødder</p>
+      <p>8 kr.</p>
+
+      <img src="" alt="" />
+      <p>Limone</p>
+      <p>10 kr.</p>
+
+      <h3>Store kager</h3>
+      <p>
+        Her kan du se vores standard store kager, der kun kan laves på bestilling. Du er også velkommen til at forespørge andre kager. Skriv endelig
+        til vores bestillingsmail
+      </p>
+
+      <img src="" alt="" />
+      <h4>Othellolagkage</h4>
+      <p>
+        Klassisk trelags lagkage med vaniljecreme, makroner, marmelade, marcipankant, chokoladeglasur og fløderosetter. Bestilles til mindst 8
+        personer.
+      </p>
+      <p>38 kr. pr. person</p>
+
+      <img src="" alt="" />
+      <h4>Hindbærmouselagkage</h4>
+      <p>
+        Trelags lagkage med hindbærmousse, chokoladestykker, marmelade, makroner, marcipankant, glasur og marengshjerter. Bestilles til mindst 8
+        personer.
+      </p>
+      <p>38 kr. pr. person</p>
+    </main>
     <script src="javascript/login.js"></script>
   </body>
 </html>
