Text til kageudvalg

--- a/bestillinger.html
+++ b/bestillinger.html
@@ -95,6 +95,51 @@
         personer.
       </p>
       <p>38 kr. pr. person</p>
+
+      <img src="" alt="" />
+      <h4>Chokolademouselagkage</h4>
+      <p>Trelags lagkage med chokolademousse, chokoladestykker, marmelade, makroner, marcipankant, chokoladeglasur og sprøde chokoladeflager.</p>
+      <p>38 kr. pr. person</p>
+
+      <img src="" alt="" />
+      <h4>Jordbærtærte</h4>
+      <p>Laves på enten mazarin eller browniebund.</p>
+      <p>
+        Vores almindelige størrelse jordbærtærte koster 98 kr. og svarer til 4-5 personer og er runde som på billedet. Større jordbærkager bliver
+        firkantede.
+      </p>
+      <p>38 kr. pr. person</p>
+
+      <img src="" alt="" />
+      <h4>Gulerodskage</h4>
+      <p>
+        Gulerodskager kan købes dagligt i vires sortiment i rund form - svarende til 5-6 personer. Større gulerodskager kan laves på bestilling som
+        firkantede.
+      </p>
+      <p>18 kr. pr. person.</p>
+
+      <img src="" alt="" />
+      <h4>Citronmåne</h4>
+      <p>
+        Citronmåner kan købes dagligt i vores sortiment i rund form - svarende til 5-6 personer. Større citronmåner kan laves på bestilling som
+        firkantede.
+      </p>
+      <p>18 kr. pr. person</p>
+
+      <img src="" alt="" />
+      <h4>Pommes Fines</h4>
+      <p>Fransk æbletærte med mazarin. Svarende til 8 personer</p>
+      <p>145 kr</p>
+
+      <img src="" alt="" />
+      <h4>Limone</h4>
+      <p>Fransk citrontærte med mazarin. Svarende til 8 personer.</p>
+      <p>145 kr.</p>
+
+      <img src="" alt="" />
+      <h4>Kagemand</h4>
+      <p>Laves på enten wienerbrød, brunsviger eller smørboller. 15 - 20 personer.</p>
+      <p>245 kr.</p>
     </main>
     <script src="javascript/login.js"></script>
   </body>
