--- a/bestillinger.html
+++ b/bestillinger.html
@@ -140,6 +140,32 @@
       <h4>Kagemand</h4>
       <p>Laves på enten wienerbrød, brunsviger eller smørboller. 15 - 20 personer.</p>
       <p>245 kr.</p>
+      __________________________________________________________________________________________________
+
+      <h1>Bestilling</h1>
+
+      <h2>Bestil din vare</h2>
+
+      <p>
+        Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til
+        os på Bestilling@bagt.nu
+      </p>
+      <p>Vi svarer altid inden for et døgn.</p>
+
+      <p>Vælg butik*</p>
+      <p>Nordsjælland: Hornbæk - Gilleleje - Helsingør</p>
+      <p>København: Jagtvej - Borgergade</p>
+
+      <h2>Bliv engros- eller erhvervskunde</h2>
+      <p>
+        Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til
+        lækre sandwiches til mødet.
+      </p>
+      <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
+      <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
+      <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
+      <p>Engros@bagt.nu</p>
+      <p>Vores butikker ligger i både København og Nordsjælland.</p>
     </main>
     <script src="javascript/login.js"></script>
   </body>
