--- a/bestillinger.html
+++ b/bestillinger.html
@@ -30,10 +30,7 @@
       <p>Gør det nemt at holde fest og lade bagt klare desserten</p>
 
       <h3>Mini Kager</h3>
-      <p>
-        Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt
-        kan laves i mini versioner.
-      </p>
+      <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p>
 
       <img src="" alt="" />
       <p>Jordbærkage på browniebund</p>
@@ -76,25 +73,16 @@
       <p>10 kr.</p>
 
       <h3>Store kager</h3>
-      <p>
-        Her kan du se vores standard store kager, der kun kan laves på bestilling. Du er også velkommen til at forespørge andre kager. Skriv endelig
-        til vores bestillingsmail
-      </p>
+      <p>Her kan du se vores standard store kager, der kun kan laves på bestilling. Du er også velkommen til at forespørge andre kager. Skriv endelig til vores bestillingsmail</p>
 
       <img src="" alt="" />
       <h4>Othellolagkage</h4>
-      <p>
-        Klassisk trelags lagkage med vaniljecreme, makroner, marmelade, marcipankant, chokoladeglasur og fløderosetter. Bestilles til mindst 8
-        personer.
-      </p>
+      <p>Klassisk trelags lagkage med vaniljecreme, makroner, marmelade, marcipankant, chokoladeglasur og fløderosetter. Bestilles til mindst 8 personer.</p>
       <p>38 kr. pr. person</p>
 
       <img src="" alt="" />
       <h4>Hindbærmouselagkage</h4>
-      <p>
-        Trelags lagkage med hindbærmousse, chokoladestykker, marmelade, makroner, marcipankant, glasur og marengshjerter. Bestilles til mindst 8
-        personer.
-      </p>
+      <p>Trelags lagkage med hindbærmousse, chokoladestykker, marmelade, makroner, marcipankant, glasur og marengshjerter. Bestilles til mindst 8 personer.</p>
       <p>38 kr. pr. person</p>
 
       <img src="" alt="" />
@@ -105,26 +93,17 @@
       <img src="" alt="" />
       <h4>Jordbærtærte</h4>
       <p>Laves på enten mazarin eller browniebund.</p>
-      <p>
-        Vores almindelige størrelse jordbærtærte koster 98 kr. og svarer til 4-5 personer og er runde som på billedet. Større jordbærkager bliver
-        firkantede.
-      </p>
+      <p>Vores almindelige størrelse jordbærtærte koster 98 kr. og svarer til 4-5 personer og er runde som på billedet. Større jordbærkager bliver firkantede.</p>
       <p>38 kr. pr. person</p>
 
       <img src="" alt="" />
       <h4>Gulerodskage</h4>
-      <p>
-        Gulerodskager kan købes dagligt i vires sortiment i rund form - svarende til 5-6 personer. Større gulerodskager kan laves på bestilling som
-        firkantede.
-      </p>
+      <p>Gulerodskager kan købes dagligt i vires sortiment i rund form - svarende til 5-6 personer. Større gulerodskager kan laves på bestilling som firkantede.</p>
       <p>18 kr. pr. person.</p>
 
       <img src="" alt="" />
       <h4>Citronmåne</h4>
-      <p>
-        Citronmåner kan købes dagligt i vores sortiment i rund form - svarende til 5-6 personer. Større citronmåner kan laves på bestilling som
-        firkantede.
-      </p>
+      <p>Citronmåner kan købes dagligt i vores sortiment i rund form - svarende til 5-6 personer. Større citronmåner kan laves på bestilling som firkantede.</p>
       <p>18 kr. pr. person</p>
 
       <img src="" alt="" />
@@ -147,10 +126,7 @@
 
       <h2>Bestil din vare</h2>
 
-      <p>
-        Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til
-        os på Bestilling@bagt.nu
-      </p>
+      <p>Ønsker du at lægge en kundebestilling hos en ad vores butikker, eller har du spørgsmål angående vores varer og sortiment? Så skriv endelig til os på Bestilling@bagt.nu</p>
       <p>Vi svarer altid inden for et døgn.</p>
 
       <p>Vælg butik*</p>
@@ -158,10 +134,7 @@
       <p>København: Jagtvej - Borgergade</p>
 
       <h2>Bliv engros- eller erhvervskunde</h2>
-      <p>
-        Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til
-        lækre sandwiches til mødet.
-      </p>
+      <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
       <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
       <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
       <p>Vi vil meget gerne hjælpe jer godt på vej. Har i spørgsmål, skal i være velkommen til at skrive på mailen:</p>
