--- a/bestillinger.html
+++ b/bestillinger.html
@@ -32,45 +32,62 @@
       <h3>Mini Kager</h3>
       <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p>
 
-      <img src="" alt="" />
-      <p>Jordbærkage på browniebund</p>
-      <p>15 kr.</p>
-
-      <img src="" alt="" />
-      <p>Jordbærkage på marzarinbund</p>
-      <p>15 kr.</p>
-
-      <img src="" alt="" />
-      <p>Pong sur</p>
-      <p>15 kr.</p>
-
-      <img src="" alt="" />
-      <p>Kartoffelkage</p>
-      <p>15 kr.</p>
-
-      <img src="" alt="" />
-      <p>Mr. Marcel</p>
-      <p>15 kr.</p>
-
-      <img src="" alt="" />
-      <p>Nøddebar</p>
-      <p>15 kr.</p>
-
-      <img src="" alt="" />
-      <p>Pinktsnitte</p>
-      <p>10 kr.</p>
-
-      <img src="" alt="" />
-      <p>Romkugle med chokolade</p>
-      <p>8 kr.</p>
-
-      <img src="" alt="" />
-      <p>Romkulge med nødder</p>
-      <p>8 kr.</p>
-
-      <img src="" alt="" />
-      <p>Limone</p>
-      <p>10 kr.</p>
+      <section>
+        <div class="grid_1-1-1-1-1">
+          <div>
+            <img src="" alt="" />
+            <p>Jordbærkage på browniebund</p>
+            <p>15 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Jordbærkage på marzarinbund</p>
+            <p>15 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Pong sur</p>
+            <p>15 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Kartoffelkage</p>
+            <p>15 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Mr. Marcel</p>
+            <p>15 kr.</p>
+          </div>
+        </div>
+        <div class="grid_1-1-1-1-1">
+          <div>
+            <img src="" alt="" />
+            <p>Nøddebar</p>
+            <p>15 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Pinktsnitte</p>
+            <p>10 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Romkugle med chokolade</p>
+            <p>8 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Romkulge med nødder</p>
+            <p>8 kr.</p>
+          </div>
+          <div>
+            <img src="" alt="" />
+            <p>Limone</p>
+            <p>10 kr.</p>
+          </div>
+        </div>
+      </section>
 
       <h3>Store kager</h3>
       <p>Her kan du se vores standard store kager, der kun kan laves på bestilling. Du er også velkommen til at forespørge andre kager. Skriv endelig til vores bestillingsmail</p>
