--- a/bestillinger.html
+++ b/bestillinger.html
@@ -23,16 +23,15 @@
     </header>
     <main>
       <img src="" alt="" />
-
       <h1>Udvalg</h1>
+      <div class="kager">
+        <h2>Kager</h2>
+        <p>Gør det nemt at holde fest og lade Bagt klare desserten</p>
+        <h3>Mini Kager</h3>
+        <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p>
+      </div>
 
-      <h2>Kager</h2>
-      <p>Gør det nemt at holde fest og lade bagt klare desserten</p>
-
-      <h3>Mini Kager</h3>
-      <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p>
-
-      <section>
+      <section class="mini_kager">
         <div class="grid_1-1-1-1-1">
           <div>
             <img src="" alt="" />
@@ -190,6 +189,7 @@
                 </select>
               </label>
             </div>
+          </div>
         </div>
 
         <div class="form-felt">
