--- a/om_bagt.html
+++ b/om_bagt.html
@@ -7,6 +7,9 @@
     <title>Bagt - Boulangerie & Bageri</title>
     <link rel="stylesheet" href="https://use.typekit.net/rjv8grd.css" />
     <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="https://use.typekit.net/rjv8grd.css" />
+    <link rel="stylesheet" href="css/mutual.css" />
+    <link rel="stylesheet" href="css/bestillinger.css" />
   </head>
   <body>
     <header>
