--- a/index.html
+++ b/index.html
@@ -35,33 +35,27 @@
         <div>
           <img src="" alt="" />
           <h2>NØRREBRO</h2>
-          <p>
-            Jagtvej 13. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30 Helligdage: 7.00 - 17.30 JULENS ÅBNINGSTIDER: 23. dec: 7.00 - 14.00 24. dec: 7.00 - 12.00 25. dec: LUKKET 26. dec: 7.00 - 14.00 27. dec: 7.00 - 14.00 31. dec: 7.00 - 13.00 1. jan: LUKKET
-            2. jan: 7.00 - 14.00 ALLE ANDRE DAGE ALM. LUKKETIDER
-          </p>
+          <p>Jagtvej 13. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30. Helligdage: 7.00 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>INDRE BY</h2>
-          <p>
-            Borgergade 130. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30 Helligdage: 7.00 - 17.30 ​ JULENS ÅBNINGSTIDER: 23. dec: 7.00 - 14.00 24. dec: 7.00 - 12.00 25. dec: LUKKET 26. dec: 7.00 - 14.00 27. dec: 7.00 - 14.00 31. dec: 7.00 - 13.00 1. jan:
-            LUKKET 2. jan: 7.00 - 14.00 ALLE ANDRE DAGE ALM. LUKKETIDER
-          </p>
+          <p>Borgergade 130. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30. Helligdage: 7.00 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>HORNBÆK</h2>
-          <p>Nordre Strandvej 339. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30 Helligdage: 6.30 - 17.30 ​ JULENS ÅBNINGSTIDER: 24. dec: 6.30 - 12.00 25. dec: LUKKET 31. dec: 6.30 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+          <p>Nordre Strandvej 339. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30. Helligdage: 6.30 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>GILLELEJE</h2>
-          <p>Gilleleje Stationsvej 2. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30 Helligdage: 6.30 - 17.30 ​ JULENS ÅBNINGSTIDER: 24. dec: 6.30 - 12.00 25. dec: LUKKET 31. dec: 6.30 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+          <p>Gilleleje Stationsvej 2. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30. Helligdage: 6.30 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>HELSINGØR</h2>
-          <p>Stengade 8. ÅBNINGSTIDER: Man - Fre: 7.00 - 17.30 Weekend & helligdage: 7.00 -16.30 ​ JULENS ÅBNINGSTIDER: 24. dec: LUKKET 25. dec: LUKKET 26. dec: LUKKET 31. dec: 7.00 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+          <p>Stengade 8. ÅBNINGSTIDER: Man - Fre: 7.00 - 17.30. Weekend & helligdage: 7.00 -16.30</p>
         </div>
         <div>
           <img src="" alt="" />
