--- a/kontakt.html
+++ b/kontakt.html
@@ -9,6 +9,9 @@
   </head>
   <body>
     <header>
+      <div class="logo">
+        <img src="Artboard 2.svg" alt="Logo" />
+      </div>
       <nav>
         <ul>
           <li><a href="index.html">Forside</a></li>
