--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     </header>
     <main>
       <iframe src="" frameborder="0"></iframe>
-      <h2>Franskinspireret bageri med danske rødder. Vi håndlaver bagværk af kvalitet med kærlighed til dig.</h2>
+      <p>Franskinspireret bageri med danske rødder. Vi håndlaver bagværk af kvalitet med kærlighed til dig.</p>
       <div>
         <h2>Lidt om os</h2>
         <p>
