--- a/kontakt.html
+++ b/kontakt.html
@@ -23,41 +23,70 @@
         <div>
           <img src="" alt="" />
           <h2>NØRREBRO</h2>
-          <p>
-            Jagtvej 13. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30 Helligdage: 7.00 - 17.30 JULENS ÅBNINGSTIDER: 23. dec: 7.00 - 14.00 24. dec: 7.00 - 12.00 25. dec: LUKKET 26. dec: 7.00 - 14.00 27. dec: 7.00 - 14.00 31. dec: 7.00 - 13.00 1. jan: LUKKET
-            2. jan: 7.00 - 14.00 ALLE ANDRE DAGE ALM. LUKKETIDER
-          </p>
+          <p>Jagtvej 13</p>
+          <p>Tlf: 28 56 23 00</p>
+          <p>Alle dage: 7.00 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>INDRE BY</h2>
-          <p>
-            Borgergade 130. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30 Helligdage: 7.00 - 17.30 ​ JULENS ÅBNINGSTIDER: 23. dec: 7.00 - 14.00 24. dec: 7.00 - 12.00 25. dec: LUKKET 26. dec: 7.00 - 14.00 27. dec: 7.00 - 14.00 31. dec: 7.00 - 13.00 1. jan:
-            LUKKET 2. jan: 7.00 - 14.00 ALLE ANDRE DAGE ALM. LUKKETIDER
-          </p>
+
+          <p>Borgergade 130</p>
+          <p>Tlf: 24 76 13 03</p>
+          <p>Alle dage: 7.00 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>HORNBÆK</h2>
-          <p>Nordre Strandvej 339. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30 Helligdage: 6.30 - 17.30 ​ JULENS ÅBNINGSTIDER: 24. dec: 6.30 - 12.00 25. dec: LUKKET 31. dec: 6.30 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+          <p>Nordre Strandvej 339</p>
+          <p>Tlf: 49 70 00 51</p>
+          <p>Alle dage: 6.30 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>GILLELEJE</h2>
-          <p>Gilleleje Stationsvej 2. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30 Helligdage: 6.30 - 17.30 ​ JULENS ÅBNINGSTIDER: 24. dec: 6.30 - 12.00 25. dec: LUKKET 31. dec: 6.30 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+          <p>Gilleleje Stationsvej 2.</p>
+          <p>Tlf: 53 70 32 50</p>
+          <p>Alle dage: 6.30 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
           <h2>HELSINGØR</h2>
-          <p>Stengade 8. ÅBNINGSTIDER: Man - Fre: 7.00 - 17.30 Weekend & helligdage: 7.00 -16.30 ​ JULENS ÅBNINGSTIDER: 24. dec: LUKKET 25. dec: LUKKET 26. dec: LUKKET 31. dec: 7.00 - 13.00 1. jan: LUKKET ALLE ANDRE DAGE ALM. LUKKETIDER</p>
+          <p>Stengade 8</p>
+          <p>Tlf: 42 36 96 55</p>
+          <p>Man - Fre: 7.00 - 17.30</p>
+          <p>Weekend & helligdage: 7.00 -16.30</p>
         </div>
         <div>
           <img src="" alt="" />
-          <h2>Bagt Forhandlere:</h2>
-          <p>Hej Humlebæk</p>
-          <p>Daisy Fredensborg</p>
-          <p>Rågeleje</p>
-          <p>Kommer snart</p>
+          <h2>HEJ HUMLEBÆK</h2>
+          <p>Hal Kochs Vej 14</p>
+          <p>Tlf: 49 70 00 51</p>
+          <p>Man-Ons: 6.45 - 18.00</p>
+          <p>Fre: 6.45 - 20.00</p>
+          <p>Lør: 8.00 - 20.00</p>
+          <p>Søn: 8.00 - 17.00</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>DAISY FREDENSBORG</h2>
+          <p>Jernbanegade 10</p>
+          <p>Tlf: 30 50 05 68</p>
+          <p>Man-Fre: 10.00 - 17.00</p>
+          <p>Tir: Lukket</p>
+          <p>Weekend & helligdage: 9.00 - 16.00</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>RÅGELEJE</h2>
+          <p>Tuehusvej 1</p>
+          <p>Tlf: 48 71 50 35</p>
+          <p>Alle dage: 7.30 - 20.00</p>
+        </div>
+        <div>
+          <img src="" alt="" />
+          <h2>KOMMER SNART</h2>
+          <p>Spændende og stor forhandlingspartner afsløres snart!</p>
         </div>
       </div>
     </main>
