--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>Bagt - Boulangerie & Bageri</title>
     <link rel="stylesheet" href="css/mutual.css" />
     <link rel="stylesheet" href="css/forside.css" />
+    <link rel="stylesheet" href="kopier herfra/footer.css" />
     <meta name="robots" content="noindex" />
   </head>
   <body>
@@ -71,4 +72,27 @@
     </main>
     <script src="javascript/login.js"></script>
   </body>
+  <footer>
+    <div>
+      <h5>Kontakt</h5>
+      <p>Mail</p>
+      <p>Telefon</p>
+    </div>
+    <div>
+      <h5>Sociale Medier</h5>
+      <p>Instagram</p>
+      <p>Facebook</p>
+      <p>LinkedIn</p>
+    </div>
+    <div>
+      <h5>Om Bagt</h5>
+      <p>Vores Historie</p>
+      <p>Værdier og visioner</p>
+    </div>
+    <div>
+      <h5>Bestillinger</h5>
+      <p>Specialbestillinger</p>
+      <p>Engros bestillinger</p>
+    </div>
+  </footer>
 </html>
