--- a/kontakt.html
+++ b/kontakt.html
@@ -25,14 +25,14 @@
       <div class="container">
         <div>
           <img src="" alt="" />
-          <h2>NØRREBRO</h2>
+          <h2>Nørrebro</h2>
           <p>Jagtvej 13</p>
           <p>Tlf: 28 56 23 00</p>
           <p>Alle dage: 7.00 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
-          <h2>INDRE BY</h2>
+          <h2>Indre by</h2>
 
           <p>Borgergade 130</p>
           <p>Tlf: 24 76 13 03</p>
@@ -40,21 +40,21 @@
         </div>
         <div>
           <img src="" alt="" />
-          <h2>HORNBÆK</h2>
+          <h2>Hornbæk</h2>
           <p>Nordre Strandvej 339</p>
           <p>Tlf: 49 70 00 51</p>
           <p>Alle dage: 6.30 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
-          <h2>GILLELEJE</h2>
+          <h2>Gilleleje</h2>
           <p>Gilleleje Stationsvej 2.</p>
           <p>Tlf: 53 70 32 50</p>
           <p>Alle dage: 6.30 - 17.30</p>
         </div>
         <div>
           <img src="" alt="" />
-          <h2>HELSINGØR</h2>
+          <h2>Helsingør</h2>
           <p>Stengade 8</p>
           <p>Tlf: 42 36 96 55</p>
           <p>Man - Fre: 7.00 - 17.30</p>
@@ -62,7 +62,7 @@
         </div>
         <div>
           <img src="" alt="" />
-          <h2>HEJ HUMLEBÆK</h2>
+          <h2>Hej Humlebæk</h2>
           <p>Hal Kochs Vej 14</p>
           <p>Tlf: 49 70 00 51</p>
           <p>Man-Ons: 6.45 - 18.00</p>
@@ -72,7 +72,7 @@
         </div>
         <div>
           <img src="" alt="" />
-          <h2>DAISY FREDENSBORG</h2>
+          <h2>Daisy Fredensborg</h2>
           <p>Jernbanegade 10</p>
           <p>Tlf: 30 50 05 68</p>
           <p>Man-Fre: 10.00 - 17.00</p>
@@ -81,18 +81,41 @@
         </div>
         <div>
           <img src="" alt="" />
-          <h2>RÅGELEJE</h2>
+          <h2>Rågeleje</h2>
           <p>Tuehusvej 1</p>
           <p>Tlf: 48 71 50 35</p>
           <p>Alle dage: 7.30 - 20.00</p>
         </div>
         <div>
           <img src="" alt="" />
-          <h2>KOMMER SNART</h2>
+          <h2>Kommer snart</h2>
           <p>Spændende og stor forhandlingspartner afsløres snart!</p>
         </div>
       </div>
     </main>
+    <footer>
+      <div>
+        <h5>Kontakt</h5>
+        <p>Mail</p>
+        <p>Telefon</p>
+      </div>
+      <div>
+        <h5>Sociale Medier</h5>
+        <p>Instagram</p>
+        <p>Facebook</p>
+        <p>LinkedIn</p>
+      </div>
+      <div>
+        <h5>Om Bagt</h5>
+        <p>Vores Historie</p>
+        <p>Værdier og visioner</p>
+      </div>
+      <div>
+        <h5>Bestillinger</h5>
+        <p>Specialbestillinger</p>
+        <p>Engros bestillinger</p>
+      </div>
+    </footer>
     <script src="javascript/login.js"></script>
   </body>
 </html>
