--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </main>
     <script src="javascript/login.js"></script>
   </body>
-  <footer>
+  <footer class="grid_1_1_1_1">
     <div>
       <h5>Kontakt</h5>
       <p>Mail</p>
