--- a/index.html
+++ b/index.html
@@ -27,13 +27,14 @@
     <main>
       <iframe src="" frameborder="0"></iframe>
       <p>Franskinspireret bageri med danske rødder. Vi håndlaver bagværk af kvalitet med kærlighed til dig.</p>
-      <div>
-        <h2>Lidt om os</h2>
+      <div class="om_os">
+        <h2>· Lidt om os ·</h2>
         <p>
           Hos Bagt bestræber vi os på at skabe bagerhåndværk af kvalitet med bæredygtighed for øje. Vi udfordrer os selv og udvikler vores butikker, samt sortiment med det franske boulagerie som inspirationskilde. Målet er at give vores gæster en
           autentisk oplevelse hos Bagt, hvorved vi bringer vores gæster tættere på Frankrig. Vi stræber efter at give kærlig service, samt at opbygge tætte relationer til vores gæster.
         </p>
       </div>
+      <h2>· Vores åbningstider ·</h2>
       <div class="container">
         <div>
           <img src="" alt="" />
