--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bagt - Boulangerie & Bageri</title>
     <meta name="robots" content="noindex" />
+    <link rel="stylesheet" href="css/kontakt.css" />
+    <link rel="stylesheet" href="css/mutual.css" />
   </head>
   <body>
     <header>
@@ -22,16 +24,16 @@
       </nav>
     </header>
     <main>
-      <div class="container">
+      <div class="grid_1-1-1">
         <div>
-          <img src="" alt="" />
+          <img src="img/norrebro.webp" alt="butikken på Nørrebro" />
           <h2>Nørrebro</h2>
           <p>Jagtvej 13</p>
           <p>Tlf: 28 56 23 00</p>
           <p>Alle dage: 7.00 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/indreby.webp" alt="Butikken i Indre By" />
           <h2>Indre by</h2>
 
           <p>Borgergade 130</p>
@@ -39,27 +41,30 @@
           <p>Alle dage: 7.00 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/hornbaek.webp" alt="Butikken i Hornbæk" />
           <h2>Hornbæk</h2>
           <p>Nordre Strandvej 339</p>
           <p>Tlf: 49 70 00 51</p>
           <p>Alle dage: 6.30 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/gilleleje.webp" alt="Butikken i Gilleleje" />
           <h2>Gilleleje</h2>
           <p>Gilleleje Stationsvej 2.</p>
           <p>Tlf: 53 70 32 50</p>
           <p>Alle dage: 6.30 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/helsingor.webp" alt="Butikken i Helsingør" />
           <h2>Helsingør</h2>
           <p>Stengade 8</p>
           <p>Tlf: 42 36 96 55</p>
           <p>Man - Fre: 7.00 - 17.30</p>
           <p>Weekend & helligdage: 7.00 -16.30</p>
         </div>
+      </div>
+
+      <div>
         <div>
           <img src="" alt="" />
           <h2>Hej Humlebæk</h2>
