--- a/kontakt.html
+++ b/kontakt.html
@@ -12,11 +12,10 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Artboard 2.svg" alt="Logo" />
+        <img src="logo.svg" alt="Logo" />
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Forside</a></li>
           <li><a href="bestillinger.html">Bestillinger</a></li>
           <li><a href="om_bagt.html">Om Bagt</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
