--- a/kopier herfra/header.html
+++ b/kopier herfra/header.html
@@ -1,5 +1,8 @@
-<link rel="stylesheet" href="css/header.css" />
+<link rel="stylesheet" href="css/mutual.css" />
 <header>
+  <div class="logo">
+    <img src="logo.svg" alt="Logo" />
+  </div>
   <nav>
     <ul>
       <li><a href="index.html">Forside</a></li>
