--- a/kontakt.html
+++ b/kontakt.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bagt - Boulangerie & Bageri</title>
     <meta name="robots" content="noindex" />
+        <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/kontakt.css" />
     <link rel="stylesheet" href="css/mutual.css" />
   </head>
