--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     </header>
     <main>
       <iframe src="" frameborder="0"></iframe>
-      <p>Franskinspireret bageri med danske rødder. Vi håndlaver bagværk af kvalitet med kærlighed til dig.</p>
+      <p class="usp">Franskinspireret bageri med danske rødder. Vi håndlaver bagværk af kvalitet med kærlighed til dig.</p>
       <div class="om_os">
         <h2>· Lidt om os ·</h2>
         <p>
