--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Artboard 2.svg" alt="Logo" />
+        <img src="logo.svg" alt="Logo" />
       </div>
       <nav>
         <ul>
@@ -37,32 +37,32 @@
       <h2>· Vores åbningstider ·</h2>
       <div class="container">
         <div>
-          <img src="" alt="" />
+          <img src="img/norrebro.webp" alt="Nørrebros butik" />
           <h2>NØRREBRO</h2>
           <p>Jagtvej 13. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30. Helligdage: 7.00 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/indreby.webp" alt="Indre by butik" />
           <h2>INDRE BY</h2>
           <p>Borgergade 130. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30. Helligdage: 7.00 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/hornbaek.webp" alt="Hornbæk butik" />
           <h2>HORNBÆK</h2>
           <p>Nordre Strandvej 339. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30. Helligdage: 6.30 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/gilleleje.webp" alt="Gilleleje butik" />
           <h2>GILLELEJE</h2>
           <p>Gilleleje Stationsvej 2. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30. Helligdage: 6.30 - 17.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/helsingor.webp" alt="Helsingør butik" />
           <h2>HELSINGØR</h2>
           <p>Stengade 8. ÅBNINGSTIDER: Man - Fre: 7.00 - 17.30. Weekend & helligdage: 7.00 -16.30</p>
         </div>
         <div>
-          <img src="" alt="" />
+          <img src="img/forhandlere.webp" alt="Forhandlere" />
           <h2>Bagt Forhandlere:</h2>
           <p>Hej Humlebæk</p>
           <p>Daisy Fredensborg</p>
