--- a/om_bagt.html
+++ b/om_bagt.html
@@ -12,7 +12,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Artboard 2.svg" alt="Logo" />
+        <img src="logo.svg" alt="Logo" />
       </div>
       <nav>
         <ul>
