--- a/bestillinger.html
+++ b/bestillinger.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="Artboard 2.svg" alt="Logo" />
+        <img src="logo.svg" alt="Logo" />
       </div>
       <nav>
         <ul>
@@ -27,11 +27,12 @@
     <main>
       <img src="img/bestilling.webp" alt="" />
       <h1>Udvalg</h1>
-      <h2>Kager</h2>
-      <p>Gør det nemt at holde fest og lade Bagt klare desserten</p>
-      <h3>Mini Kager</h3>
-      <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p>
-      
+      <div class="top">
+        <h2>Kager</h2>
+        <p>Gør det nemt at holde fest og lade Bagt klare desserten</p>
+        <h3>Mini Kager</h3>
+        <p>Hvis du synes det er svært at vælge én kage…. Vores mini-kager er lavet i mundrette størrelser og kan spises uden bestik. Alle kager hos Bagt kan laves i mini versioner.</p> 
+      </div>
       <section class="mini_kager">
         <div class="grid_1-1">
           <h4 class="">Jordbærkage på browniebund</h4>
@@ -91,7 +92,7 @@
         <img class="col" src="img/store_kager/othellolagkage.webp" alt="Othellolagkage" />
         <div>
           <h4>Othellolagkage</h4>
-          <p>Klassisk trelags lagkage med vaniljecreme, makroner, marmelade, marcipankant, chokoladeglasur og fløderosetter. Bestilles til mindst 8 personer.</p>
+          <p class="tekst">Klassisk trelags lagkage med vaniljecreme, makroner, marmelade, marcipankant, chokoladeglasur og fløderosetter. Bestilles til mindst 8 personer.</p>
           <p class="pris">38 kr. pr. person</p>
         </div>
       </section>
@@ -100,7 +101,7 @@
           <img class="col" src="img/store_kager/hindbærmouselagkage.webp" alt="Hindbærmouselagkage" />
           <div>
             <h4>Hindbærmouselagkage</h4>
-            <p>Trelags lagkage med hindbærmousse, chokoladestykker, marmelade, makroner, marcipankant, glasur og marengshjerter. Bestilles til mindst 8 personer.</p>
+            <p class="tekst">Trelags lagkage med hindbærmousse, chokoladestykker, marmelade, makroner, marcipankant, glasur og marengshjerter. Bestilles til mindst 8 personer.</p>
             <p class="pris">38 kr. pr. person</p>
           </div> 
         </section>
@@ -109,7 +110,7 @@
           <img class="col" src="img/store_kager/chokolademouselagkage.webp" alt="chokolademouselagkage" />
           <div>
             <h4>Chokolademouselagkage</h4>
-            <p>Trelags lagkage med chokolademousse, chokoladestykker, marmelade, makroner, marcipankant, chokoladeglasur og sprøde chokoladeflager.</p>
+            <p class="tekst">Trelags lagkage med chokolademousse, chokoladestykker, marmelade, makroner, marcipankant, chokoladeglasur og sprøde chokoladeflager.</p>
             <p class="pris">38 kr. pr. person</p>
           </div>
         </section>
@@ -118,8 +119,8 @@
           <img class="col" src="img/store_kager/jordbærtærte.webp" alt="Jordbærtærte" />
           <div>
             <h4>Jordbærtærte</h4>
-            <p>Laves på enten mazarin eller browniebund.</p>
-            <p>Vores almindelige størrelse jordbærtærte koster 98 kr. og svarer til 4-5 personer og er runde som på billedet. Større jordbærkager bliver firkantede.</p>
+            <p class="tekst">Laves på enten mazarin eller browniebund.</p>
+            <p class="tekst">Vores almindelige størrelse jordbærtærte koster 98 kr. og svarer til 4-5 personer og er runde som på billedet. Større jordbærkager bliver firkantede.</p>
             <p class="pris">38 kr. pr. person</p>
           </div>
         </section>
@@ -128,7 +129,7 @@
           <img class="col" src="img/store_kager/gulerodskage.webp" alt="Gulerodskage" />
           <div>
             <h4>Gulerodskage</h4>
-            <p>Gulerodskager kan købes dagligt i vires sortiment i rund form - svarende til 5-6 personer. Større gulerodskager kan laves på bestilling som firkantede.</p>
+            <p class="tekst">Gulerodskager kan købes dagligt i vires sortiment i rund form - svarende til 5-6 personer. Større gulerodskager kan laves på bestilling som firkantede.</p>
             <p class="pris">18 kr. pr. person.</p>
           </div>
         </section>
@@ -137,7 +138,7 @@
           <img class="col" src="img/store_kager/citronmaane.webp" alt="citronmaane" />
           <div>
             <h4>Citronmåne</h4>
-            <p>Citronmåner kan købes dagligt i vores sortiment i rund form - svarende til 5-6 personer. Større citronmåner kan laves på bestilling som firkantede.</p>
+            <p class="tekst">Citronmåner kan købes dagligt i vores sortiment i rund form - svarende til 5-6 personer. Større citronmåner kan laves på bestilling som firkantede.</p>
             <p class="pris">18 kr. pr. person</p>
           </div>
         </section>
@@ -146,7 +147,7 @@
           <img class="col" src="img/store_kager/pommes_fines.webp" alt="Pommes Fines" />
           <div>
             <h4>Pommes Fines</h4>
-            <p>Fransk æbletærte med mazarin. Svarende til 8 personer</p>
+            <p class="tekst">Fransk æbletærte med mazarin. Svarende til 8 personer</p>
             <p class="pris">145 kr</p>
           </div>
         </section>
@@ -155,7 +156,7 @@
           <img class="col" src="img/store_kager/limone.webp" alt="Limone" />
           <div>
             <h4>Limone</h4>
-            <p>Fransk citrontærte med mazarin. Svarende til 8 personer.</p>
+            <p class="tekst">Fransk citrontærte med mazarin. Svarende til 8 personer.</p>
             <p class="pris">145 kr.</p>
           </div>
         </section>
@@ -164,7 +165,7 @@
           <img class="col" src="img/store_kager/kagemand.webp" alt="Kagemand" />
           <div>
             <h4>Kagemand</h4>
-            <p>Laves på enten wienerbrød, brunsviger eller smørboller. 15 - 20 personer.</p>
+            <p class="tekst">Laves på enten wienerbrød, brunsviger eller smørboller. 15 - 20 personer.</p>
             <p class="pris">245 kr.</p>
           </div>
         </section>
@@ -240,6 +241,29 @@
       <p>Engros@bagt.nu</p>
       <p>Vores butikker ligger i både København og Nordsjælland.</p>
     </main>
+    <footer>
+      <div>
+        <h5>Kontakt</h5>
+        <p>Mail</p>
+        <p>Telefon</p>
+      </div>
+      <div>
+        <h5>Sociale Medier</h5>
+        <p>Instagram</p>
+        <p>Facebook</p>
+        <p>LinkedIn</p>
+      </div>
+      <div>
+        <h5>Om Bagt</h5>
+        <p>Vores Historie</p>
+        <p>Værdier og visioner</p>
+      </div>
+      <div>
+        <h5>Bestillinger</h5>
+        <p>Specialbestillinger</p>
+        <p>Engros bestillinger</p>
+      </div>
+    </footer>
     <script src="javascript/login.js"></script>
   </body>
 </html>
