footer update på alle sider

--- a/bestillinger.html
+++ b/bestillinger.html
@@ -259,7 +259,7 @@
       <p>Engros@bagt.nu</p>
       <p>Vores butikker ligger i både København og Nordsjælland.</p>
     </main>
-    <footer>
+    <footer class="grid_1_1_1_1">
       <div>
         <h5>Kontakt</h5>
         <p>Mail</p>
