--- a/kontakt.html
+++ b/kontakt.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Bagt - Boulangerie & Bageri</title>
     <meta name="robots" content="noindex" />
-        <link rel="stylesheet" href="css/footer.css" />
     <link rel="stylesheet" href="css/kontakt.css" />
     <link rel="stylesheet" href="css/mutual.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <header>
@@ -145,7 +145,7 @@ Vi glæder os til at høre fra dig!
         </div>
       </div>
     </section>
-    <footer>
+    <footer class="grid_1_1_1_1">
       <div>
         <h5>Kontakt</h5>
         <p>Mail</p>
