--- a/om_bagt.html
+++ b/om_bagt.html
@@ -8,6 +8,7 @@
     <meta name="robots" content="noindex" />
     <link rel="stylesheet" href="css/mutual.css" />
     <link rel="stylesheet" href="css/bestillinger.css" />
+    <link rel="stylesheet" href="css/footer.css" />
   </head>
   <body>
     <header>
@@ -24,6 +25,29 @@
       </nav>
     </header>
     <main></main>
+    <footer class="grid_1_1_1_1">
+      <div>
+        <h5>Kontakt</h5>
+        <p>Mail</p>
+        <p>Telefon</p>
+      </div>
+      <div>
+        <h5>Sociale Medier</h5>
+        <p>Instagram</p>
+        <p>Facebook</p>
+        <p>LinkedIn</p>
+      </div>
+      <div>
+        <h5>Om Bagt</h5>
+        <p>Vores Historie</p>
+        <p>Værdier og visioner</p>
+      </div>
+      <div>
+        <h5>Bestillinger</h5>
+        <p>Specialbestillinger</p>
+        <p>Engros bestillinger</p>
+      </div>
+    </footer>
     <script src="javascript/login.js"></script>
   </body>
 </html>
