--- a/index.html
+++ b/index.html
@@ -35,33 +35,33 @@
         </p>
       </div>
       <h2>· Vores åbningstider ·</h2>
-      <div class="container">
-        <div>
+      <div class="gallery">
+        <div class="container">
           <img src="img/norrebro.webp" class="thumbnail" height="100" width="100" alt="Nørrebros butik" />
           <h2 class="thumbnail">NØRREBRO</h2>
           <p class="thumbnail">Jagtvej 13. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30. Helligdage: 7.00 - 17.30</p>
         </div>
-        <div>
+        <div class="container">
           <img src="img/indreby.webp" class="thumbnail" height="100" width="100" alt="Indre by butik" />
           <h2 class="thumbnail">INDRE BY</h2>
           <p class="thumbnail">Borgergade 130. ÅBNINGSTIDER: Alle dage: 7.00 - 17.30. Helligdage: 7.00 - 17.30</p>
         </div>
-        <div>
+        <div class="container">
           <img src="img/hornbaek.webp" class="thumbnail" height="100" width="100" alt="Hornbæk butik" />
           <h2 class="thumbnail">HORNBÆK</h2>
           <p class="thumbnail">Nordre Strandvej 339. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30. Helligdage: 6.30 - 17.30</p>
         </div>
-        <div>
+        <div class="container">
           <img src="img/gilleleje.webp" class="thumbnail" height="100" width="100" alt="Gilleleje butik" />
           <h2 class="thumbnail">GILLELEJE</h2>
           <p class="thumbnail">Gilleleje Stationsvej 2. ÅBNINGSTIDER: Alle dage: 6.30 - 17.30. Helligdage: 6.30 - 17.30</p>
         </div>
-        <div>
+        <div class="container">
           <img src="img/helsingor.webp" class="thumbnail" height="100" width="100" alt="Helsingør butik" />
           <h2 class="thumbnail">HELSINGØR</h2>
           <p class="thumbnail">Stengade 8. ÅBNINGSTIDER: Man - Fre: 7.00 - 17.30. Weekend & helligdage: 7.00 -16.30</p>
         </div>
-        <div>
+        <div class="container">
           <img src="img/forhandlere.webp" class="thumbnail" height="100" width="100" alt="Forhandlere" />
           <h2 class="thumbnail">Bagt Forhandlere:</h2>
           <p class="thumbnail">Hej Humlebæk</p>
