--- a/bestillinger.html
+++ b/bestillinger.html
@@ -13,11 +13,10 @@
   <body>
     <header>
       <div class="logo">
-        <img src="logo.svg" alt="Logo" />
+        <a href="index.html"><img src="logo.svg" alt="logo"></a>
       </div>
       <nav>
         <ul>
-          <li><a href="index.html">Forside</a></li>
           <li><a href="bestillinger.html">Bestillinger</a></li>
           <li><a href="om_bagt.html">Om Bagt</a></li>
           <li><a href="kontakt.html">Kontakt</a></li>
