--- a/kontakt.html
+++ b/kontakt.html
@@ -13,7 +13,7 @@
   <body>
     <header>
       <div class="logo">
-        <img src="logo.svg" alt="Logo" />
+        <a href="index.html"><img src="logo.svg" alt="logo"></a>
       </div>
       <nav>
         <ul>
@@ -25,8 +25,8 @@
     </header>
     <section>
       <h2>Kontakt os</h2>
-      <div class="grid_1-1-1">
-        <div class="container">
+      <div class="grid_kontakt">
+        <div class="boks">
           <h3>Mail</h3>
 <address>
   <a href="mailto:job1@bagt.nu">job1@bagt.nu</a>
@@ -34,26 +34,29 @@
       <a href="mailto:bestilling@bagt.nu">bestilling@bagt.nu</a>
 </address>
         </div>
-        <div class="container">
+        <div class="boks">
           <h3>Social</h3>
           <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a>
           <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a>
           <a href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps" class="linkedin"">LinkedIn</a>
         </div>
-          <div class="container">
+          <div class="boks">
           <h3>App</h3>
-        <p>noget med app bla bla bla</p>
+        <p>Download vores app og få ekslusive fordele. Gør dine stempelkort digitale. Hold dig opdateret på nyheder og optjen point når du handler.
+</p>
+   <a href="https://apps.apple.com/us/app/bagt/id1564306002" class="ios">IOS</a>
+      <a href="https://play.google.com/store/apps/details?id=com.app_bagtnu.layout&pli=1" class="android">Android</a>
         </div>
       </div>
     </section>
     <section>
-    <div class="grid_1-1">
-<div class="container">
-<img src="" alt="">
+    <div class="grid_job">
+<div class="boks">
+<img src="img/job.webp" alt="Medarbejder hos Bagt">
 <p>Gilleleje- Fuldtidsmedarbejdere søges</p>
 <p>Hornbæk- Fuldtidsmedarbejdere søges</p>
 </div>
-<div class="container">
+<div class="boks">
   <h2>Bagt family</h2>
   <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. 
 
@@ -72,51 +75,56 @@ Vi glæder os til at høre fra dig!
     </section>
     <section>
       <h2>Vores butikker</h2>
-      <div class="grid_1-1-1">
-        <div>
+      <div class="grid_butikker">
+        <div class="boks">
           <img src="img/norrebro.webp" alt="butikken på Nørrebro" />
-<h2>Nørrebro</h2>
+<h3>Nørrebro</h3>
           <p>Jagtvej 13</p>
           <p>Tlf: 28 56 23 00</p>
           <p>Alle dage: 7.00 - 17.30</p>
           
         </div>
-        <div>
+        <div class="boks">
           <img src="img/indreby.webp" alt="Butikken i Indre By" />
-          <h2>Indre by</h2>
+          <h3>Indre by</h3>
 
           <p>Borgergade 130</p>
           <p>Tlf: 24 76 13 03</p>
           <p>Alle dage: 7.00 - 17.30</p>
         </div>
-        <div>
+        <div class="boks">
           <img src="img/hornbaek.webp" alt="Butikken i Hornbæk" />
-          <h2>Hornbæk</h2>
+          <h3>Hornbæk</h3>
           <p>Nordre Strandvej 339</p>
           <p>Tlf: 49 70 00 51</p>
           <p>Alle dage: 6.30 - 17.30</p>
         </div>
-        <div>
+        <div class="boks">
           <img src="img/gilleleje.webp" alt="Butikken i Gilleleje" />
-          <h2>Gilleleje</h2>
+          <h3>Gilleleje</h3>
           <p>Gilleleje Stationsvej 2.</p>
           <p>Tlf: 53 70 32 50</p>
           <p>Alle dage: 6.30 - 17.30</p>
         </div>
-        <div>
+        <div class="boks">
           <img src="img/helsingor.webp" alt="Butikken i Helsingør" />
-          <h2>Helsingør</h2>
+          <h3>Helsingør</h3>
           <p>Stengade 8</p>
           <p>Tlf: 42 36 96 55</p>
           <p>Man - Fre: 7.00 - 17.30</p>
           <p>Weekend & helligdage: 7.00 -16.30</p>
         </div>
+            <div class="boks">
+          <h3>helligdage</h3 >
+          <p>Se åbningstider for helligdage </p>
+          <a href="">her</a>
+        </div>
       </div>
     </section>
     <section>
        <h2>Forhandlere</h2>
-      <div class="grid_1-1-1-1">
-        <div>
+      <div class="grid_forhandlere">
+        <div class="boks">
           <h2>Hej Humlebæk</h2>
           <p>Hal Kochs Vej 14</p>
           <p>Tlf: 49 70 00 51</p>
@@ -125,7 +133,7 @@ Vi glæder os til at høre fra dig!
           <p>Lør: 8.00 - 20.00</p>
           <p>Søn: 8.00 - 17.00</p>
         </div>
-        <div>
+        <div class="boks">
           <h2>Daisy Fredensborg</h2>
           <p>Jernbanegade 10</p>
           <p>Tlf: 30 50 05 68</p>
@@ -133,13 +141,13 @@ Vi glæder os til at høre fra dig!
           <p>Tir: Lukket</p>
           <p>Weekend & helligdage: 9.00 - 16.00</p>
         </div>
-        <div>
+        <div class="boks">
           <h2>Rågeleje</h2>
           <p>Tuehusvej 1</p>
           <p>Tlf: 48 71 50 35</p>
           <p>Alle dage: 7.30 - 20.00</p>
         </div>
-        <div>
+        <div class="boks">
           <h2>Kommer snart</h2>
           <p>Spændende og stor forhandlingspartner afsløres snart!</p>
         </div>
