--- a/kontakt.html
+++ b/kontakt.html
@@ -51,25 +51,23 @@
     </section>
     <section>
     <div class="grid_job">
-<div class="boks">
+<div class="boks1">
 <img src="img/job.webp" alt="Medarbejder hos Bagt">
-<p>Gilleleje- Fuldtidsmedarbejdere søges</p>
-<p>Hornbæk- Fuldtidsmedarbejdere søges</p>
+<p>Gilleleje - Fuldtidsmedarbejdere søges</p>
+<p>Hornbæk - Fuldtidsmedarbejdere søges</p>
 </div>
 <div class="boks">
   <h2>Bagt family</h2>
-  <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. 
+  <p>Hos Bagt udvikler vi os hele tiden, så derfor er vi altid på udkig efter nye engagerede medarbejdere. </p>
 
-Vi tror på, at det skal være sjovt at gå på arbejde, og at vi alle sammen har et ansvar for at gøre Bagt til et godt sted at være.
+<p> Vi tror på, at det skal være sjovt at gå på arbejde, og at vi allesammen har et ansvar for at gøre Bagt til et godt sted at være. </p>
 
-Du er altid velkommen til at sende os en uopfordret ansøgning til os. 
+<p> Du er altid velkommen til at sende os en uopfordret ansøgning til os. Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.</p>
 
-Vi finder mange af vores medarbejdere gennem uopfordrede ansøgninger.
+<p> Send din ansøgning til <a href="mailto:job1@bagt.nu">job1@bagt.nu</a>
 
-Send din ansøgning til: job1@bagt.nu
+<p>Vi glæder os til at høre fra dig!</p>
 
-Vi glæder os til at høre fra dig!
-</p>
 </div>
     </div>
     </section>
@@ -125,7 +123,7 @@ Vi glæder os til at høre fra dig!
        <h2>Forhandlere</h2>
       <div class="grid_forhandlere">
         <div class="boks">
-          <h2>Hej Humlebæk</h2>
+          <h3>Hej Humlebæk</h3>
           <p>Hal Kochs Vej 14</p>
           <p>Tlf: 49 70 00 51</p>
           <p>Man-Ons: 6.45 - 18.00</p>
@@ -134,21 +132,21 @@ Vi glæder os til at høre fra dig!
           <p>Søn: 8.00 - 17.00</p>
         </div>
         <div class="boks">
-          <h2>Daisy Fredensborg</h2>
+          <h3>Daisy Fredensborg</h3>
           <p>Jernbanegade 10</p>
           <p>Tlf: 30 50 05 68</p>
           <p>Man-Fre: 10.00 - 17.00</p>
           <p>Tir: Lukket</p>
-          <p>Weekend & helligdage: 9.00 - 16.00</p>
+          <p>Weekend: 9.00 - 16.00</p>
         </div>
         <div class="boks">
-          <h2>Rågeleje</h2>
+          <h3>Rågeleje</h3>
           <p>Tuehusvej 1</p>
           <p>Tlf: 48 71 50 35</p>
           <p>Alle dage: 7.30 - 20.00</p>
         </div>
         <div class="boks">
-          <h2>Kommer snart</h2>
+          <h3>Kommer snart</h3>
           <p>Spændende og stor forhandlingspartner afsløres snart!</p>
         </div>
       </div>
