--- a/bestillinger.html
+++ b/bestillinger.html
@@ -258,29 +258,31 @@
         <button class="button">Indsend</button>
       </form>
     </main>
-    <footer class="grid_1_1_1_1">
-      <div>
-        <h5>Kontakt</h5>
-        <p>Mail</p>
-        <p>Telefon</p>
-      </div>
-      <div>
-        <h5>Sociale Medier</h5>
-        <p>Instagram</p>
-        <p>Facebook</p>
-        <p>LinkedIn</p>
-      </div>
-      <div>
-        <h5>Om Bagt</h5>
-        <p>Vores Historie</p>
-        <p>Værdier og visioner</p>
-      </div>
-      <div>
-        <h5>Bestillinger</h5>
-        <p>Specialbestillinger</p>
-        <p>Engros bestillinger</p>
-      </div>
-    </footer>
+    <div class="footer">
+      <footer class="grid_1_1_1_1">
+        <div>
+          <h5>Kontakt</h5>
+          <p>Mail</p>
+          <p>Telefon</p>
+        </div>
+        <div>
+          <h5>Sociale Medier</h5>
+          <p>Instagram</p>
+          <p>Facebook</p>
+          <p>LinkedIn</p>
+        </div>
+        <div>
+          <h5>Om Bagt</h5>
+          <p>Vores Historie</p>
+          <p>Værdier og visioner</p>
+        </div>
+        <div>
+          <h5>Bestillinger</h5>
+          <p>Specialbestillinger</p>
+          <p>Engros bestillinger</p>
+        </div>
+      </footer>
+    </div>
     <script src="javascript/login.js"></script>
   </body>
 </html>
