--- a/kopier herfra/footer.html
+++ b/kopier herfra/footer.html
@@ -1,21 +1,21 @@
 <footer class="grid_1_1_1_1">
-  <div>
+  <div class="box">
     <h5>Kontakt</h5>
     <p>Mail</p>
     <p>Telefon</p>
   </div>
-  <div>
+  <div class="box">
     <h5>Sociale Medier</h5>
     <p>Instagram</p>
     <p>Facebook</p>
     <p>LinkedIn</p>
   </div>
-  <div>
+  <div class="box">
     <h5>Om Bagt</h5>
     <p>Vores Historie</p>
     <p>Værdier og visioner</p>
   </div>
-  <div>
+  <div class="box">
     <h5>Bestillinger</h5>
     <p>Specialbestillinger</p>
     <p>Engros bestillinger</p>
