--- a/bestillinger.html
+++ b/bestillinger.html
@@ -52,7 +52,7 @@
             </div>
             
             <div class="grid_1-1">
-              <h4 class="">Romkulge med nødder</h4>
+              <h4 class="">Romkugle med nødder</h4>
               <p class="">8 kr.</p>
             </div>
           </div>
