footer update links

--- a/kopier herfra/footer.html
+++ b/kopier herfra/footer.html
@@ -1,14 +1,18 @@
 <footer class="grid_1_1_1_1">
   <div class="box">
     <h5>Kontakt</h5>
-    <p>Mail</p>
+    <a href="kontakt.html#link_footer">Mail</a>
     <p>Telefon</p>
   </div>
   <div class="box">
     <h5>Sociale Medier</h5>
-    <p>Instagram</p>
-    <p>Facebook</p>
-    <p>LinkedIn</p>
+    <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a><br />
+    <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a><br />
+    <a
+      href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
+      class="linkedin"
+      >LinkedIn</a
+    >
   </div>
   <div class="box">
     <h5>Om Bagt</h5>
@@ -17,7 +21,7 @@
   </div>
   <div class="box">
     <h5>Bestillinger</h5>
-    <p>Specialbestillinger</p>
-    <p>Engros bestillinger</p>
+    <a href="bestillinger.hmtl#link_footer1">Specialbestillinger</a>
+    <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
   </div>
 </footer>
