--- a/bestillinger.html
+++ b/bestillinger.html
@@ -93,7 +93,7 @@
       </section>
           
       <div class="top">
-        <h3>Store kager</h3>
+        <h3 id="link_footer1">Store kager</h3>
         <p>Her kan du se vores standard store kager, der kun kan laves på bestilling. Du er også velkommen til at forespørge andre kager. Skriv endelig til vores bestillingsmail</p>
       </div>
         
@@ -200,7 +200,7 @@
         </div>
       </div>
 
-      <h2>Bliv engros- eller erhvervskunde</h2>
+      <h2 id="link_footer3">Bliv engros- eller erhvervskunde</h2>
       <p>Har du brug for at fylde din café med friskbagt brød? Eller servere croissanter på dit arbejde hver fredag morgen? Måske har i mest lyst til lækre sandwiches til mødet.</p>
       <p>Vi sammensætter pakker til vores erhvervskunder og leder efter løsninger, der passer til lige præcis dine ønsker</p>
       <p>Hos Bagt har du også mulighed for at blive oprettet som kontokunde og få løbende fakturering. Minimum handelsbeløb 5000,- pr. måned.</p>
@@ -258,30 +258,33 @@
         <button class="button">Indsend</button>
       </form>
     </main>
-    <div class="footer">
-      <footer class="grid_1_1_1_1">
-        <div>
-          <h5>Kontakt</h5>
-          <p>Mail</p>
-          <p>Telefon</p>
-        </div>
-        <div>
-          <h5>Sociale Medier</h5>
-          <p>Instagram</p>
-          <p>Facebook</p>
-          <p>LinkedIn</p>
-        </div>
-        <div>
-          <h5>Om Bagt</h5>
-          <p>Vores Historie</p>
-          <p>Værdier og visioner</p>
-        </div>
-        <div>
-          <h5>Bestillinger</h5>
-          <p>Specialbestillinger</p>
-          <p>Engros bestillinger</p>
-        </div>
-      </footer>
+    <footer class="grid_1_1_1_1">
+      <div class="box">
+        <h5>Kontakt</h5>
+        <a href="kontakt.html#link_footer">Mail</a>
+        <p>Telefon</p>
+      </div>
+      <div class="box">
+        <h5>Sociale Medier</h5>
+        <a href="https://www.instagram.com/bagt_boulangerie/" class="instagram">Instagram</a><br />
+        <a href="https://www.facebook.com/bagt.dk" class="facebook">Facebook</a><br />
+        <a
+          href="https://www.linkedin.com/authwall?trk=bf&trkInfo=AQF4zpW5iJkvPwAAAYTns344Z9MVaVW1owAXV24CTfG8TTUdDbP9vVp5K4jnj1Cff8mLsSIwDbxcI2DJXplKEh-bYS_RSU_-SxsQtej9BIslZhvfrtsinVJJ73Q2QzNwIPdY_dQ=&original_referer=&sessionRedirect=https%3A%2F%2Fwww.linkedin.com%2Fcompany%2Fbagt-boulangerie-aps"
+          class="linkedin"
+          >LinkedIn</a
+        >
+      </div>
+      <div class="box">
+        <h5>Om Bagt</h5>
+        <p>Vores Historie</p>
+        <p>Værdier og visioner</p>
+      </div>
+      <div class="box">
+        <h5>Bestillinger</h5>
+        <a href="bestillinger.hmtl#link_footer1">Specialbestillinger</a>
+        <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
+      </div>
+    </footer>
     </div>
     <script src="javascript/login.js"></script>
   </body>
