--- a/bestillinger.html
+++ b/bestillinger.html
@@ -281,7 +281,7 @@
       </div>
       <div class="box">
         <h5>Bestillinger</h5>
-        <a href="bestillinger.hmtl#link_footer1">Specialbestillinger</a>
+        <a href="bestillinger.html#link_footer1">Specialbestillinger</a><br>
         <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
       </div>
     </footer>
