--- a/kopier herfra/footer.html
+++ b/kopier herfra/footer.html
@@ -21,7 +21,7 @@
   </div>
   <div class="box">
     <h5>Bestillinger</h5>
-    <a href="bestillinger.hmtl#link_footer1">Specialbestillinger</a>
+    <a href="bestillinger.htmll#link_footer1">Specialbestillinger</a>
     <a href="bestillinger.html#link_footer3">Engros bestillinger</a>
   </div>
 </footer>
